operator/pkg/gateway-api/testdata/gateway/listenerset-dual-parentref-independence/input/listenerset-dual-parentref-independence.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-dual-parentref
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - name: gw-dual-parentref-listener
      port: 80
      protocol: HTTP
      hostname: gw-dual.com
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: ls-dual-parentref
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: gateway-dual-parentref
    namespace: gateway-conformance-infra
  listeners:
    - name: ls-dual-parentref-listener
      port: 8080
      protocol: HTTP
      hostname: ls-dual.com
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-dual-parentref-both
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-dual-parentref
      namespace: gateway-conformance-infra
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: ls-dual-parentref
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-dual-parentref-one
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-dual-parentref
      namespace: gateway-conformance-infra
      sectionName: ls-dual-parentref-listener
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: ls-dual-parentref
      namespace: gateway-conformance-infra
      sectionName: ls-dual-parentref-listener
  rules:
    - backendRefs:
        - name: infra-backend-v2
          port: 8080
